--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "mocha": "^7.1.1",
+    "should": "^13.2.3",
     "supertest": "^4.0.2"
   }
 }
